--- a/test/data/html/test-dom-text-scanner.html
+++ b/test/data/html/test-dom-text-scanner.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width,initial-scale=1">
-        <title>Yomitan DOMTextScanner Tests</title>
+        <title>DOMTextScanner Tests</title>
         <link rel="icon" type="image/gif" href="data:image/gif;base64,R0lGODlhEAAQAKEBAAAAAP///////////yH5BAEKAAIALAAAAAAQABAAAAImFI6Zpt0B4YkS0TCpq07xbmEgcGVRUpLaI46ZG7ppalY0jDCwUAAAOw==">
         <link rel="stylesheet" href="test-stylesheet.css">
     </head>
 <body>
 
-    <h1>Yomitan DOMTextScanner Tests</h1>
+    <h1>DOMTextScanner Tests</h1>
 
     <test-case
         data-test-data='{
