--- a/test/data/html/test-document2-frame1.html
+++ b/test/data/html/test-document2-frame1.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width,initial-scale=1">
-        <title>Yomitan Tests</title>
-        <script src="test-document2-script.js"></script>
-        <style>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>Frame 1</title>
+    <script src="js/html-test-utilities.js"></script>
+    <script src="js/test-document2-frame1.js"></script>
+    <style>
 body {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 14px;
@@ -26,15 +27,14 @@ a, a:visited {
     padding: 0.5em;
     background-color: #f8f8f8;
 }
-        </style>
-    </head>
+    </style>
+</head>
 <body><div class="content">
 <div>
     ありがとう
 </div>
 <div>
     <a href="#" class="fullscreen-link">Toggle fullscreen</a>
-    <script>setup(document.body, document.body);</script>
 </div>
 </div></body>
 </html>
