Make element types more consistent

--- a/test/data/html/test-document3-frame2.html
+++ b/test/data/html/test-document3-frame2.html
@@ -10,14 +10,14 @@
 </head>
 <body><div class="content">
 
-    <div class="description">&lt;iframe&gt; element inside of an open shadow DOM.</div>
+    <test-description>&lt;iframe&gt; element inside of an open shadow DOM.</test-description>
 
     <div id="shadow-iframe-container-open"></div>
     <template id="shadow-iframe-container-open-content-template">
         <iframe src="test-document2-frame1.html" allowfullscreen="true" style="width: 100%; height: 50px; border: 1px solid #d8d8d8;"></iframe>
     </template>
 
-    <div class="description">Add elements</div>
+    <test-description>Add elements</test-description>
 
     <div>
         <a href="#" class="add-elements" data-count="1000">1000</a>
