--- a/test/data/html/test-document1.html
+++ b/test/data/html/test-document1.html
@@ -11,8 +11,7 @@
 
     <h1>Yomitan Tests</h1>
 
-    <div
-        class="test"
+    <test-case
         data-test-type="scan"
         data-element-from-point-selector="span"
         data-caret-range-from-point-selector="span"
@@ -25,10 +24,9 @@
         data-sentence="真白「心配してくださって、ありがとございます」"
     >
         <span>真白「心配してくださって、ありがとございます」</span>
-    </div>
+    </test-case>
 
-    <div
-        class="test"
+    <test-case
         data-test-type="scan"
         data-element-from-point-selector="span"
         data-caret-range-from-point-selector="span"
@@ -41,10 +39,9 @@
         data-sentence="心配してくださって、ありがとございます"
     >
         <span>真白「心配してくださって、ありがとございます」</span>
-    </div>
+    </test-case>
 
-    <div
-        class="test"
+    <test-case
         data-test-type="scan"
         data-element-from-point-selector="span"
         data-caret-range-from-point-selector="span"
@@ -57,10 +54,9 @@
         data-sentence="心配して「くださって」、ありがと「ございます」"
     >
         <span>真白「心配して「くださって」、ありがと「ございます」」</span>
-    </div>
+    </test-case>
 
-    <div
-        class="test"
+    <test-case
         data-test-type="scan"
         data-element-from-point-selector="span"
         data-caret-range-from-point-selector="span"
@@ -73,10 +69,9 @@
         data-sentence="ありがとございます。"
     >
         <span>ありがとございます。ありがとございます。</span>
-    </div>
+    </test-case>
 
-    <div
-        class="test"
+    <test-case
         data-test-type="scan"
         data-element-from-point-selector="span"
         data-caret-range-from-point-selector="span"
@@ -89,10 +84,9 @@
         data-sentence="ありがとございます。"
     >
         <span>ありがとございます。ありがとございます。</span>
-    </div>
+    </test-case>
 
-    <div
-        class="test"
+    <test-case
         data-test-type="scan"
         data-element-from-point-selector="span"
         data-caret-range-from-point-selector="span"
@@ -105,10 +99,9 @@
         data-sentence="ありがとございます。！？"
     >
         <span>ありがとございます。！？ありがとございます。！？</span>
-    </div>
+    </test-case>
 
-    <div
-        class="test"
+    <test-case
         data-test-type="scan"
         data-element-from-point-selector="span"
         data-caret-range-from-point-selector="span"
@@ -121,10 +114,9 @@
         data-sentence="ありがとございます！！！"
     >
         <span>ありがとございます！！！ありがとございます！！！</span>
-    </div>
+    </test-case>
 
-    <div
-        class="test"
+    <test-case
         data-test-type="scan"
         data-element-from-point-selector="input"
         data-caret-range-from-point-selector="input"
@@ -138,10 +130,9 @@
         data-has-imposter="true"
     >
         <input type="text" value="真白「心配してくださって、ありがとございます」" style="width: 100%; box-sizing: border-box; font-family: inherit; font-size: inherit; border: 1px solid #d8d8d8; padding: 0.2em;">
-    </div>
+    </test-case>
 
-    <div
-        class="test"
+    <test-case
         data-test-type="scan"
         data-element-from-point-selector="textarea"
         data-caret-range-from-point-selector="textarea"
@@ -155,10 +146,9 @@
         data-has-imposter="true"
     >
         <textarea style="width: 100%; height: 3em; box-sizing: border-box; font-family: inherit; font-size: inherit; border: 1px solid #d8d8d8; padding: 0.2em;">真白「心配してくださって、ありがとございます」</textarea>
-    </div>
+    </test-case>
 
-    <div
-        class="test"
+    <test-case
         data-test-type="scan"
         data-element-from-point-selector="button"
         data-caret-range-from-point-selector="button"
@@ -171,10 +161,9 @@
         data-sentence="よみたん"
     >
         <button type="button" style="width: 100%; box-sizing: border-box; font-family: inherit; font-size: inherit; border: 1px solid #d8d8d8; background-color: #f0f0f0; padding: 0.2em;">よみたん</button>
-    </div>
+    </test-case>
 
-    <div
-        class="test"
+    <test-case
         data-test-type="scan"
         data-element-from-point-selector="img"
         data-caret-range-from-point-selector="img"
@@ -187,10 +176,9 @@
         data-sentence="よみたん"
     >
         <img src="data:image/gif;base64,R0lGODdhBwAHAIABAAAAAP///ywAAAAABwAHAAACDIRvEaC32FpCbEkKCgA7" alt="よみたん" title="よみたん" style="width: 70px; height: 70px; image-rendering: crisp-edges; image-rendering: pixelated; display: block;">
-    </div>
+    </test-case>
 
-    <div
-        class="test"
+    <test-case
         data-test-type="scan"
         data-element-from-point-selector="span:nth-of-type(3)"
         data-caret-range-from-point-selector="span:nth-of-type(3)"
@@ -208,10 +196,9 @@
 <span>ありがとございます3</span>
 <span>ありがとございます4</span>
 <span>ありがとございます5</span>
-    </div>
+    </test-case>
 
-    <div
-        class="test"
+    <test-case
         data-test-type="scan"
         data-element-from-point-selector="span:nth-of-type(3)"
         data-caret-range-from-point-selector="span:nth-of-type(3)"
@@ -229,10 +216,9 @@
 <span>ありがとございます3</span>
 <span>ありがとございます4</span>
 <span>ありがとございます5</span>
-    </div>
+    </test-case>
 
-    <div
-        class="test"
+    <test-case
         data-test-type="text-source-range-seek"
         data-seek-node-selector="span:nth-of-type(1)"
         data-seek-node-is-text="true"
@@ -267,10 +253,9 @@
         らりるれろ
         わゐ&#x3000;ゑを
         </span><span>trailing content</span>
-    </div>
+    </test-case>
 
-    <div
-        class="test"
+    <test-case
         data-test-type="text-source-range-seek"
         data-seek-node-selector="span:nth-of-type(1)"
         data-seek-node-is-text="true"
@@ -305,10 +290,9 @@
         らりるれろ
         わゐ&#x3000;ゑを
         </span><span>trailing content</span>
-    </div>
+    </test-case>
 
-    <div
-        class="test"
+    <test-case
         data-test-type="text-source-range-seek"
         data-seek-node-selector="span:nth-of-type(1)"
         data-seek-node-is-text="true"
@@ -343,10 +327,9 @@
         らりるれろ
         わゐ&#x3000;ゑを
         </span><span>trailing content</span>
-    </div>
+    </test-case>
 
-    <div
-        class="test"
+    <test-case
         data-test-type="text-source-range-seek"
         data-seek-node-selector="span:nth-of-type(2)"
         data-seek-node-is-text="true"
@@ -381,7 +364,7 @@
         らりるれろ
         わゐ&#x3000;ゑを
         </span><span>trailing content</span>
-    </div>
+    </test-case>
 
 </body>
 </html>
