--- a/test/data/html/test-document3-frame1.html
+++ b/test/data/html/test-document3-frame1.html
@@ -10,7 +10,7 @@
 </head>
 <body><div class="content">
 
-    <div class="description">Add elements</div>
+    <test-description>Add elements</test-description>
 
     <div>
         <a href="#" class="add-elements" data-count="1000">1000</a>
