--- a/test/data/html/test-document2.html
+++ b/test/data/html/test-document2.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Yomitan Manual Tests</title>
-    <link rel="icon" type="image/gif" href="data:image/gif;base64,R0lGODlhAQABAIABAAAAAP///yH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==">
+    <title>Manual Tests</title>
+    <link rel="icon" type="image/gif" href="data:image/gif;base64,R0lGODdhAQABAIABAAAAAP///ywAAAAAAQABAAACAkQBADs=">
     <link rel="stylesheet" href="test-stylesheet.css">
     <script src="js/html-test-utilities.js"></script>
     <script src="js/test-document2.js"></script>
@@ -33,7 +33,8 @@
     </style>
 </head>
 <body>
-    <h1>Yomitan Manual Tests</h1>
+    <h1>Manual Tests</h1>
+
     <test-description>Manual tests involving fullscreen elements, &lt;iframe&gt;s, and shadow DOMs.</test-description>
 
     <test-case>
