--- a/test/data/html/test-document3-frame2.html
+++ b/test/data/html/test-document3-frame2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Yomitan Manual Performance Tests</title>
+    <title>Manual Performance Tests</title>
     <link rel="stylesheet" href="test-stylesheet.css">
     <script src="js/html-test-utilities.js"></script>
     <script src="js/test-document3-frames.js"></script>
