--- a/test/data/html/test-document3.html
+++ b/test/data/html/test-document3.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width,initial-scale=1">
-        <title>Yomitan Manual Performance Tests</title>
-        <link rel="icon" type="image/gif" href="data:image/gif;base64,R0lGODlhAQABAIABAAAAAP///yH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==">
-        <link rel="stylesheet" href="test-stylesheet.css">
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>Manual Performance Tests</title>
+    <link rel="icon" type="image/gif" href="data:image/gif;base64,R0lGODdhAQABAIABAAAAAP///ywAAAAAAQABAAACAkQBADs=">
+    <link rel="stylesheet" href="test-stylesheet.css">
+</head>
 <body>
 
-    <h1>Yomitan Manual Performance Tests</h1>
+    <h1>Manual Performance Tests</h1>
 
-    <test-description>Testing Yomitan performance with artificially demanding cases in a real browser</test-description>
+    <test-description>Testing performance with artificially demanding cases in a real browser</test-description>
 
     <test-case>
         <test-description>&lt;iframe&gt; element.</test-description>
