--- a/test/data/html/document-util.html
+++ b/test/data/html/document-util.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Tests</title>
+    <title>DocumentUtil Tests</title>
     <link rel="icon" type="image/gif" href="data:image/gif;base64,R0lGODdhAQABAIABAAAAAP///ywAAAAAAQABAAACAkQBADs=">
     <link rel="stylesheet" href="test-stylesheet.css">
 </head>
 <body>
 
-    <h1>Tests</h1>
+    <h1>DocumentUtil Tests</h1>
 
     <test-case
         data-test-type="scan"
