--- a/test/data/html/document-util.html
+++ b/test/data/html/document-util.html
@@ -11,6 +11,8 @@
 
     <h1>DocumentUtil Tests</h1>
 
+    <test-description>Automated test cases for DocumentUtil.</test-description>
+
     <test-case
         data-test-type="scan"
         data-element-from-point-selector="span"
