--- a/test/data/html/dom-text-scanner.html
+++ b/test/data/html/dom-text-scanner.html
@@ -11,6 +11,8 @@
 
     <h1>DOMTextScanner Tests</h1>
 
+    <test-description>Automated test cases for DOMTextScanner.</test-description>
+
     <test-case
         data-test-data='{
             "node": "div:nth-of-type(1)",
