--- a/test/data/html/popup-tests-frame1.html
+++ b/test/data/html/popup-tests-frame1.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Frame 1</title>
     <script src="js/html-test-utilities.js"></script>
-    <script src="js/test-document2-frame1.js"></script>
+    <script src="js/popup-tests-frame1.js"></script>
     <style>
 body {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
