--- a/test/data/html/test-document3-frame2.html
+++ b/test/data/html/test-document3-frame2.html
@@ -14,7 +14,7 @@
 
     <div id="shadow-iframe-container-open"></div>
     <template id="shadow-iframe-container-open-content-template">
-        <iframe src="test-document2-frame1.html" allowfullscreen="true" style="width: 100%; height: 50px; border: 1px solid #d8d8d8;"></iframe>
+        <iframe src="popup-tests-frame1.html" allowfullscreen="true" style="width: 100%; height: 50px; border: 1px solid #d8d8d8;"></iframe>
     </template>
 
     <test-description>Add elements</test-description>
