--- a/test/data/html/popup-tests.html
+++ b/test/data/html/popup-tests.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Manual Tests</title>
+    <title>Popup Tests</title>
     <link rel="icon" type="image/gif" href="data:image/gif;base64,R0lGODdhAQABAIABAAAAAP///ywAAAAAAQABAAACAkQBADs=">
     <link rel="stylesheet" href="test-stylesheet.css">
     <script src="js/html-test-utilities.js"></script>
@@ -33,9 +33,11 @@
     </style>
 </head>
 <body>
-    <h1>Manual Tests</h1>
+    <h1>Popup Tests</h1>
 
-    <test-description>Manual tests involving fullscreen elements, &lt;iframe&gt;s, and shadow DOMs.</test-description>
+    <test-description>
+        Tests involving popup functionality in different contextsts, such as fullscreen elements, &lt;iframe&gt; elements, and shadow DOMs.
+    </test-description>
 
     <test-case>
         <test-description>Standard content.</test-description>
