--- a/test/data/html/performance-frame1.html
+++ b/test/data/html/performance-frame1.html
@@ -3,19 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Manual Performance Tests</title>
+    <title>Performance Tests</title>
     <link rel="stylesheet" href="test-stylesheet.css">
     <script src="js/html-test-utilities.js"></script>
-    <script src="js/test-document3-frames.js"></script>
+    <script src="js/performance-frames.js"></script>
 </head>
 <body><div class="content">
-
-    <test-description>&lt;iframe&gt; element inside of an open shadow DOM.</test-description>
-
-    <div id="shadow-iframe-container-open"></div>
-    <template id="shadow-iframe-container-open-content-template">
-        <iframe src="popup-tests-frame1.html" allowfullscreen="true" style="width: 100%; height: 50px; border: 1px solid #d8d8d8;"></iframe>
-    </template>
 
     <test-description>Add elements</test-description>
 
