--- a/test/data/html/dom-text-scanner.html
+++ b/test/data/html/dom-text-scanner.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width,initial-scale=1">
-        <title>Yomitan DOMTextScanner Tests</title>
-        <link rel="icon" type="image/gif" href="data:image/gif;base64,R0lGODlhEAAQAKEBAAAAAP///////////yH5BAEKAAIALAAAAAAQABAAAAImFI6Zpt0B4YkS0TCpq07xbmEgcGVRUpLaI46ZG7ppalY0jDCwUAAAOw==">
-        <link rel="stylesheet" href="test-stylesheet.css">
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>DOMTextScanner Tests</title>
+    <link rel="icon" type="image/gif" href="data:image/gif;base64,R0lGODdhAQABAIABAAAAAP///ywAAAAAAQABAAACAkQBADs=">
+    <link rel="stylesheet" href="test-stylesheet.css">
+</head>
 <body>
 
-    <h1>Yomitan DOMTextScanner Tests</h1>
+    <h1>DOMTextScanner Tests</h1>
 
-    <y-test
+    <test-description>Automated test cases for DOMTextScanner.</test-description>
+
+    <test-case
         data-test-data='{
             "node": "div:nth-of-type(1)",
             "offset": 0,
@@ -23,12 +25,12 @@
             }
         }'
     >
-        <y-description>Layout newlines expected due to entering and exiting display:block nodes.</y-description>
+        <test-description>Layout newlines expected due to entering and exiting display:block nodes.</test-description>
 <div><div>小ぢん</div>まり1</div>
 <div>小ぢん<div>まり2</div></div>
-    </y-test>
+    </test-case>
 
-    <y-test
+    <test-case
         data-test-data='{
             "node": "div:nth-of-type(1)::text",
             "offset": 0,
@@ -40,11 +42,11 @@
             }
         }'
     >
-        <y-description>Layout newline expected due to sequential display:block elements.</y-description>
+        <test-description>Layout newline expected due to sequential display:block elements.</test-description>
 <div>小ぢんまり1</div><div>小ぢんまり2</div>
-    </y-test>
+    </test-case>
 
-    <y-test
+    <test-case
         data-test-data='{
             "node": "div:nth-of-type(1)::text",
             "offset": 0,
@@ -56,12 +58,12 @@
             }
         }'
     >
-        <y-description>Layout newline expected due to sequential display:block elements separated by a newline.</y-description>
+        <test-description>Layout newline expected due to sequential display:block elements separated by a newline.</test-description>
 <div>小ぢんまり1</div>
 <div>小ぢんまり2</div>
-    </y-test>
+    </test-case>
 
-    <y-test
+    <test-case
         data-test-data='{
             "node": "span:nth-of-type(1)::text",
             "offset": 0,
@@ -73,11 +75,11 @@
             }
         }'
     >
-        <y-description>No newlines expected due to display:inline.</y-description>
+        <test-description>No newlines expected due to display:inline.</test-description>
 <span>小ぢんまり1</span><span>小ぢんまり2</span>
-    </y-test>
+    </test-case>
 
-    <y-test
+    <test-case
         data-test-data='{
             "node": "span:nth-of-type(1)::text",
             "offset": 0,
@@ -89,12 +91,12 @@
             }
         }'
     >
-        <y-description>No newlines expected due to white-space:normal.</y-description>
+        <test-description>No newlines expected due to white-space:normal.</test-description>
 <span>小ぢんまり1</span>
 <span>小ぢんまり2</span>
-    </y-test>
+    </test-case>
 
-    <y-test
+    <test-case
         data-test-data='{
             "node": "span:nth-of-type(1)::text",
             "offset": 0,
@@ -106,14 +108,14 @@
             }
         }'
     >
-        <y-description>Newline expected due to white-space:pre.</y-description>
+        <test-description>Newline expected due to white-space:pre.</test-description>
 <pre>
 <span>小ぢんまり1</span>
 <span>小ぢんまり2</span>
 </pre>
-    </y-test>
+    </test-case>
 
-    <y-test
+    <test-case
         data-test-data='{
             "node": "span:nth-of-type(1)::text",
             "offset": 0,
@@ -125,11 +127,11 @@
             }
         }'
     >
-        <y-description>No newlines expected due to display:inline-block. Actual layout flow cannot be determined by DOM/CSS alone.</y-description>
+        <test-description>No newlines expected due to display:inline-block. Actual layout flow cannot be determined by DOM/CSS alone.</test-description>
 <span style="display: inline-block;">小ぢんまり1</span><span style="display: inline-block;">小ぢんまり2</span>
-    </y-test>
+    </test-case>
 
-    <y-test
+    <test-case
         style="position: relative;"
         data-test-data='{
             "node": "div:nth-of-type(1)::text",
@@ -142,11 +144,11 @@
             }
         }'
     >
-        <y-description>Single newline expected due to display:block layout.</y-description>
+        <test-description>Single newline expected due to display:block layout.</test-description>
 <div>小ぢんまり1</div><div style="position: relative;">小ぢんまり2</div>
-    </y-test>
+    </test-case>
 
-    <y-test
+    <test-case
         style="position: relative; overflow: hidden;"
         data-test-data='{
             "node": "div:nth-of-type(1)::text",
@@ -159,11 +161,11 @@
             }
         }'
     >
-        <y-description>Two newlines expected due to position:absolute causing a significant layout change.</y-description>
+        <test-description>Two newlines expected due to position:absolute causing a significant layout change.</test-description>
 <div>小ぢんまり1</div><div style="position: absolute;">小ぢんまり2</div>
-    </y-test>
+    </test-case>
 
-    <y-test
+    <test-case
         style="position: relative; overflow: hidden;"
         data-test-data='{
             "node": "div:nth-of-type(1)::text",
@@ -176,11 +178,11 @@
             }
         }'
     >
-        <y-description>Two newlines expected due to position:fixed causing a significant layout change.</y-description>
+        <test-description>Two newlines expected due to position:fixed causing a significant layout change.</test-description>
 <div>小ぢんまり1</div><div style="position: fixed;">小ぢんまり2</div>
-    </y-test>
+    </test-case>
 
-    <y-test
+    <test-case
         style="position: relative;"
         data-test-data='{
             "node": "div:nth-of-type(1)::text",
@@ -193,11 +195,11 @@
             }
         }'
     >
-        <y-description>Two newlines expected due to position:sticky being able to cause a significant layout change.</y-description>
+        <test-description>Two newlines expected due to position:sticky being able to cause a significant layout change.</test-description>
 <div>小ぢんまり1</div><div style="position: sticky;">小ぢんまり2</div>
-    </y-test>
+    </test-case>
 
-    <y-test
+    <test-case
         data-test-data='{
             "node": "rt",
             "offset": 0,
@@ -209,11 +211,11 @@
             }
         }'
     >
-        <y-description>Scanning text starting in an &lt;rt&gt; element. Should start scanning at the start of the &lt;ruby&gt; tag instead.</y-description>
+        <test-description>Scanning text starting in an &lt;rt&gt; element. Should start scanning at the start of the &lt;ruby&gt; tag instead.</test-description>
 <div><ruby>小<rp>(</rp><rt>こ</rt><rp>)</rp></ruby>ぢんまり1</div>
-    </y-test>
+    </test-case>
 
-    <y-test
+    <test-case
         data-test-data='{
             "node": "div",
             "offset": 0,
@@ -225,11 +227,11 @@
             }
         }'
     >
-        <y-description>Skip &lt;script&gt; content.</y-description>
+        <test-description>Skip &lt;script&gt; content.</test-description>
 <div>小ぢん<script>/*comment*/</script>まり1</div>
-    </y-test>
+    </test-case>
 
-    <y-test
+    <test-case
         data-test-data='{
             "node": "div",
             "offset": 0,
@@ -241,11 +243,11 @@
             }
         }'
     >
-        <y-description>Skip &lt;style&gt; content.</y-description>
+        <test-description>Skip &lt;style&gt; content.</test-description>
 <div>小ぢん<style>/*comment*/</style>まり1</div>
-    </y-test>
+    </test-case>
 
-    <y-test
+    <test-case
         data-test-data='{
             "node": "div",
             "offset": 0,
@@ -257,11 +259,11 @@
             }
         }'
     >
-        <y-description>Skip &lt;textarea&gt; content.</y-description>
+        <test-description>Skip &lt;textarea&gt; content.</test-description>
 <div>小ぢん<textarea>textarea content</textarea>まり1</div>
-    </y-test>
+    </test-case>
 
-    <y-test
+    <test-case
         data-test-data='{
             "node": "div",
             "offset": 0,
@@ -273,11 +275,11 @@
             }
         }'
     >
-        <y-description>Skip &lt;input&gt; content.</y-description>
+        <test-description>Skip &lt;input&gt; content.</test-description>
 <div>小ぢん<input value="content">まり1</div>
-    </y-test>
+    </test-case>
 
-    <y-test
+    <test-case
         data-test-data='{
             "node": "div",
             "offset": 0,
@@ -289,11 +291,11 @@
             }
         }'
     >
-        <y-description>Skip &lt;button&gt; content.</y-description>
+        <test-description>Skip &lt;button&gt; content.</test-description>
 <div>小ぢん<button type="button">content</button>まり1</div>
-    </y-test>
+    </test-case>
 
-    <y-test
+    <test-case
         data-test-data='{
             "node": "div",
             "offset": 0,
@@ -305,11 +307,11 @@
             }
         }'
     >
-        <y-description>Skip content with font-size:0.</y-description>
+        <test-description>Skip content with font-size:0.</test-description>
 <div>小ぢん<span style="font-size: 0;">content</span>まり1</div>
-    </y-test>
+    </test-case>
 
-    <y-test
+    <test-case
         data-test-data='{
             "node": "div",
             "offset": 0,
@@ -321,11 +323,11 @@
             }
         }'
     >
-        <y-description>Skip content with opacity:0.</y-description>
+        <test-description>Skip content with opacity:0.</test-description>
 <div>小ぢん<span style="opacity: 0;">content</span>まり1</div>
-    </y-test>
+    </test-case>
 
-    <y-test
+    <test-case
         data-test-data='{
             "node": "div",
             "offset": 0,
@@ -337,11 +339,11 @@
             }
         }'
     >
-        <y-description>Skip content with visibility:hidden.</y-description>
+        <test-description>Skip content with visibility:hidden.</test-description>
 <div>小ぢん<span style="visibility: hidden;">content</span>まり1</div>
-    </y-test>
+    </test-case>
 
-    <y-test
+    <test-case
         data-test-data='{
             "node": "div",
             "offset": 0,
@@ -353,11 +355,11 @@
             }
         }'
     >
-        <y-description>Skip content with display:none.</y-description>
+        <test-description>Skip content with display:none.</test-description>
 <div>小ぢん<span style="display: none;">content</span>まり1</div>
-    </y-test>
+    </test-case>
 
-    <y-test
+    <test-case
         data-test-data='{
             "node": "div",
             "offset": 0,
@@ -369,11 +371,11 @@
             }
         }'
     >
-        <y-description>Don't skip content with user-select:none.</y-description>
+        <test-description>Don't skip content with user-select:none.</test-description>
 <div>小ぢ<span style="user-select: none;">ん</span>まり1</div>
-    </y-test>
+    </test-case>
 
-    <y-test
+    <test-case
         data-test-data='{
             "node": "div",
             "offset": 0,
@@ -385,9 +387,9 @@
             }
         }'
     >
-        <y-description>Skip content with user-select:none <em>and</em> a transparent color.</y-description>
+        <test-description>Skip content with user-select:none <em>and</em> a transparent color.</test-description>
 <div>小ぢん<span style="user-select: none; color: rgba(0, 0, 0, 0);">content</span>まり1</div>
-    </y-test>
+    </test-case>
 
 </body>
 </html>
