undo branding changes

--- a/ext/info.html
+++ b/ext/info.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title i18n="info.title">Yezichak Info</title>
+    <title i18n="info.title">Yomitan Info</title>
     <link rel="tongue.png" sizes="16x16">
     <link rel="tongue.png" sizes="19x19">
     <link rel="tongue.png" sizes="32x32">
@@ -23,7 +23,7 @@
 
     <span tabindex="-1" id="content-scroll-focus"></span>
 
-    <h1 i18n="info.title">Yezichak Info</h1>
+    <h1 i18n="info.title">Yomitan Info</h1>
 
     <h2 id="general" i18n="info.general">General</h2>
     <div class="settings-group">
@@ -61,6 +61,7 @@
             <ul>
                 <li><span i18n="info.supportAndDictionaries">Support and downloadable dictionaries: </span><a href="https://discord.gg/WuqdTDQWd" rel="noreferrer noopener">Discord</a></li>
                 <li><span i18n="info.informationAndSourceCode">Information and source code: </span><a href="https://github.com/StefanVukovic99/yezichak" rel="noreferrer noopener">Github</a></li>
+                <li>Release notes: <a href="https://github.com/themoeway/yomitan/releases" rel="noreferrer noopener" data-href-format="https://github.com/themoeway/yomitan/releases/tag/{version}" id="release-notes-this-version-link">This version</a> | <a href="https://github.com/themoeway/yomitan/releases" rel="noreferrer noopener">All versions</a></li>
                 <li>
                     <span i18n="info.moreExtensionInformation">More extension information: </span>
                     <a href="/permissions.html" i18n="pages.Permissions">Permissions</a> | <a href="/legal.html" i18n="pages.Licences">Licenses</a> | <a href="/issues.html" i18n="pages.Issues">Issues</a>
