--- a/ext/welcome.html
+++ b/ext/welcome.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title i18n="welcome.title">
-        Welcome to Yezichak!
+        Welcome to Yomitan!
     </title>
     <link rel="tongue.png" sizes="16x16">
     <link rel="tongue.png" sizes="19x19">
@@ -33,7 +33,7 @@
       <div class="settings-item">
         <div class="settings-item-inner settings-item-inner-wrappable"><div class="settings-item-left"><div class="settings-item-label">
               <p>
-                There are custom Anki templates in your settings. Note that <a href="https://github.com/themoeway/yomitan#custom-templates" target="_blank" rel="noopener noreferrer">some syntax has changed from previous versions of Yezichak.</a>
+                There are custom Anki templates in your settings. Note that <a href="https://github.com/themoeway/yomitan#custom-templates" target="_blank" rel="noopener noreferrer">some syntax has changed from previous versions of Yomitan.</a>
                 Please ensure that your custom templates are using the updated syntax.
               </p>
           </div></div></div>
@@ -48,7 +48,7 @@
         <div class="settings-item">
             <div class="settings-item-inner"><div class="settings-item-left"><div class="settings-item-label">
                 <span i18n="welcome.actionPopup.1">Clicking the </span><img src="/images/yezichak-icon.svg" class="inline-icon" alt="">
-                <em> <span i18n="Yezichak">Yezichak</span></em>
+                <em> <span i18n="Yomitan">Yomitan</span></em>
                 <span i18n="welcome.actionPopup.2"> button in the browser bar will open the quick-actions popup.</span>
             </div></div></div>
             <div class="settings-item-children settings-item-children-group">
@@ -74,18 +74,18 @@
                     <em> <span i18n="welcome.question.questionMark">question mark</span></em>
                     <span i18n="welcome.question.2"> button will open the </span>
                     <a href="/info.html" target="_blank" rel="noopener" i18n="pages.Information">Information</a>
-                    <span i18n="welcome.question.3"> page, which has some helpful information and links about Yezichak.</span>
+                    <span i18n="welcome.question.3"> page, which has some helpful information and links about Yomitan.</span>
                 </div></div></div></div>
             </div>
         </div>
         <div class="settings-item">
             <div class="settings-item-inner"><div class="settings-item-left"><div class="settings-item-label">
                 <span i18n="welcome.dictionaries.1">
-                    Yezichak requires one or more dictionaries to be installed in order to look up terms, kanji, and other information.
+                    Yomitan requires one or more dictionaries to be installed in order to look up terms, kanji, and other information.
                     Several downloadable dictionaries can be found on the
                 </span>
                 <a href="https://discord.gg/WuqdTDQWd" target="_blank" rel="noopener noreferrer" i18n="welcome.dictionaries.discordServer">
-                    Yezichak Discord server
+                    Yomitan Discord server
                 </a>
                 <span i18n="welcome.dictionaries.2">
                     , allowing you to choose the dictionaries most relevant for you.
@@ -114,7 +114,7 @@
 
                 <br><br>
 
-                If you are migrating from Yomichan, you may be interested in importing your data into Yezichak.
+                If you are migrating from Yomichan, you may be interested in importing your data into Yomitan.
                 Please follow instructions from <a href="https://github.com/themoeway/yomitan#migrating-from-yomichan" target="_blank" rel="noopener noreferrer">Yomitan's README</a> for that.
 
                 <br><br>
@@ -129,7 +129,7 @@
 
                 <br><br>
 
-                If you are migrating from Yomichan, you may be interested in importing your data into Yezichak.
+                If you are migrating from Yomichan, you may be interested in importing your data into Yomitan.
                 Please follow instructions from <a href="https://github.com/themoeway/yomitan#migrating-from-yomichan" target="_blank" rel="noopener noreferrer">Yomitan's README</a> for that.
 
                 <br><br>
@@ -343,7 +343,7 @@
 
         <div class="warning-text margin-above no-dictionaries-installed-warning" hidden>
             No dictionaries have been installed yet.
-            Visit the <a href="https://discord.gg/WuqdTDQWd" target="_blank" rel="noopener noreferrer">Yezichak Discord server</a>
+            Visit the <a href="https://discord.gg/WuqdTDQWd" target="_blank" rel="noopener noreferrer">Yomitan Discord server</a>
             for a list of free dictionaries or click the <em>Import</em> button below to select a dictionary file to import.
         </div>
         <div id="dictionary-error" class="danger-text margin-above" hidden></div>
