--- a/ext/issues.html
+++ b/ext/issues.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Yezichak Issues</title>
+    <title>Yomitan Issues</title>
     <link rel="tongue.png" sizes="16x16">
     <link rel="tongue.png" sizes="19x19">
     <link rel="tongue.png" sizes="32x32">
