--- a/ext/welcome.html
+++ b/ext/welcome.html
@@ -6,13 +6,13 @@
     <title i18n="welcome.title">
         Welcome to Yomitan!
     </title>
-    <link rel="tongue.png" sizes="16x16">
-    <link rel="tongue.png" sizes="19x19">
-    <link rel="tongue.png" sizes="32x32">
-    <link rel="tongue.png" sizes="38x38">
-    <link rel="tongue.png" sizes="48x48">
-    <link rel="tongue.png" sizes="64x64">
-    <link rel="tongue.png" sizes="128x128">
+    <link rel="icon" type="image/png" href="/images/icon16.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="/images/icon19.png" sizes="19x19">
+    <link rel="icon" type="image/png" href="/images/icon32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/images/icon38.png" sizes="38x38">
+    <link rel="icon" type="image/png" href="/images/icon48.png" sizes="48x48">
+    <link rel="icon" type="image/png" href="/images/icon64.png" sizes="64x64">
+    <link rel="icon" type="image/png" href="/images/icon128.png" sizes="128x128">
     <link rel="stylesheet" type="text/css" href="/css/material.css">
     <link rel="stylesheet" type="text/css" href="/css/settings.css">
 </head>
