--- a/ext/welcome.html
+++ b/ext/welcome.html
@@ -47,7 +47,7 @@
     <div class="settings-group">
         <div class="settings-item">
             <div class="settings-item-inner"><div class="settings-item-left"><div class="settings-item-label">
-                <span i18n="welcome.actionPopup.1">Clicking the </span><img src="/images/yezichak-icon.svg" class="inline-icon" alt="">
+                <span i18n="welcome.actionPopup.1">Clicking the </span><img src="/images/yomitan-icon.svg" class="inline-icon" alt="">
                 <em> <span i18n="Yomitan">Yomitan</span></em>
                 <span i18n="welcome.actionPopup.2"> button in the browser bar will open the quick-actions popup.</span>
             </div></div></div>
