--- a/ext/settings.html
+++ b/ext/settings.html
@@ -1505,6 +1505,21 @@
         </div>
     </div>
     <div class="settings-group advanced-only">
+        <div class="settings-item advanced-only"><div class="settings-item-inner settings-item-inner-wrappable">
+            <div class="settings-item-left">
+                <div class="settings-item-label">
+                    Part of speech filtering
+                </div>
+                <div class="settings-item-description">
+                    <p>
+                        Filter algorithm deinflections using part of speech tags.
+                    </p>
+                </div>
+            </div>
+            <div class="settings-item-right">
+                <label class="toggle"><input type="checkbox" data-setting="translation.partsOfSpeechFilter"><span class="toggle-body"><span class="toggle-track"></span><span class="toggle-knob"></span></span></label>
+            </div>
+        </div></div>
         <div class="settings-item settings-item-button" data-modal-action="show,translation-text-replacement-patterns"><div class="settings-item-inner">
             <div class="settings-item-left">
                 <div class="settings-item-label">Configure custom text replacement patterns&hellip;</div>
